samples/_failures_safe/1761434696_3fd353_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0f02aa1.c: In function ‘main’:
./samples/SAFE/__tmp_c0f02aa1.c:142: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c0f02aa1.c:141:5: error: expected declaration or statement at end of input
  141 |     for
      |     ^~~
